2004-09-07  Matthias Wimmer  <m@tthias.net>

    * jsm/modules/mod_offline.c: ignore CDATA between offline <message/>s
    * jsm/modules/mod_roster.c: we lost the pending_in state at a roster set

2004-09-06  Matthias Wimmer  <m@tthias.net>

    * jsm/modules/mod_roster.c: XMPP IM's way to handle subscription states

2004-09-01  Matthias Wimmer  <m@tthias.net>

    * jabberd/config.c: use pmalloco instead of pmalloc_x
    * jabberd/deliver.c: same
    * jabberd/heartbeat.c: same
    * jsm/sessions.c: Added parameter check for js_session_to()/_from()

2004-07-23  Matthias Wimmer  <m@tthias.net>

    * dialback/dialback.c: allow clustering of s2s components
    * dialback/dialback_in.c: same
    * dialback/dialback_out.c: same
    * dnsrv/dnsrv.c: same
    * jabber.xml.dist.in: same

2004-07-15  Matthias Wimmer  <m@tthias.net>

    * jabberd/lib/base64.c: moved str_b64decode from str.c to base64.c
    * jabberd/lib/str.c: same
    * jabberd/lib/jid.c: free the caching strcuture on server shutdown
    * jabberd/lib/pool.c: do not try to allocate memory indefinitely
    * man/jabberd.8.in: documented exit states

2004-07-07  Matthias Wimmer  <m@tthias.net>

    * configure.in: check for openssl using pkg-config
    * jabber.xml.dist.in: Disable stone-age s2s connections by default
    * dialback/dialback.c: added documentation / removed comment related to
	old pthsock_server, that had already been removed from jabberd
    * jabberd/mio.c: added some debugging statements

2004-07-06  Matthias Wimmer  <m@tthias.net>

    * dnsrv/srv_resolv.c: Fix DNS resolving. Bug introduced on 2004-06-30.

2004-07-01  Matthias Wimmer  <m@tthias.net>

    * jabberd/log.c: Fix for broken log messages of type 'record'. Bug could
    	be used for DoS, but existed only in CVS since 2004-05-14.
    * jabberd/config.c: portable syslog facilities
    * jabberd/jabberd.h: same
    * jabberd/base/base_syslog.c: same
    * jabberd/jsm/mod_offline.c: added documentation