@@ -1,3 +1,7 @@
+2004-09-21  Matthias Wimmer  <m@tthias.net>
+
+    * xdb_file/xdb_file.c: Make hashed spool directories optional
+
 2004-09-07  Matthias Wimmer  <m@tthias.net>
 
     * jsm/modules/mod_offline.c: ignore CDATA between offline <message/>s
